unpackaged/main/default/objects/WorkType/fields/Default_Resolution_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Resolution_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Resolution Code</label>
    <referenceTo>FSL_Resolution_Code__c</referenceTo>
    <relationshipLabel>Work Types</relationshipLabel>
    <relationshipName>Work_Types</relationshipName>
    <type>Lookup</type>
</CustomField>