unpackaged/main/default/objects/WorkType/fields/T_Code__c.field-meta.xml
<CustomField>
    <fullName>T_Code__c</fullName>
    <label>T-Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>