unpackaged/main/default/objects/WorkType/fields/Trouble_code__c.field-meta.xml
<CustomField>
    <fullName>Trouble_code__c</fullName>
    <label>Trouble code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>